--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -20,12 +20,27 @@
     margin-bottom: 20px;
 }
 
+.links nav{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+/*Individually space icon? seperate with img with section*/
+
+.links .img-links img{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-right: 56px;
+}
+
 .links ul{
     display: inline-block;
     list-style-type: none;
 }
 
-.links ul li{
+.links .nav-links ul li{
     display: inline-block;
     margin-right: 20px;
 }
@@ -67,6 +82,10 @@ a{
 }
 
 /*change font style*/
+
+.heading{
+    margin-left: 20px;
+}
 
 .heading h1{
     font-size: 50px;
@@ -193,4 +212,17 @@ footer hr{
 
 .terms{
     text-align: center;
+}
+
+/*Products Page*/
+.gallery{
+    margin: 20px;
+
+}
+
+.small-gallery{
+    display: flex;
+    justify-content: space-between;
+    width: 120px;
+    height: 120px;
 }
