--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -1,8 +1,15 @@
+/*@font-face {
+    font-family: 'Exo';
+    src: url('fonts/Rubik-VariableFont_wght.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}*/
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 /*if want banner above navbar to have logo + image then create section class logo before navbar*/
@@ -13,11 +20,28 @@
     padding: 20px;
 }
 
+.search-bar{
+    text-align: center;
+    margin-top: 20px;
+}
+.search-bar input{
+    padding: 5px;
+    width: 700px;
+}
+.search-bar button{
+    background-color: transparent;
+    color: white;
+    border: none;
+    transform: translateY(4px);
+    cursor: pointer;
+}
+
 .links{
     flex: 1;
     text-align: right;
-    padding-right: 20px;
+    padding-right: 10px;
     margin-bottom: 20px;
+    padding-top: 20px;
 }
 
 .links nav{
@@ -51,6 +75,23 @@
     text-align: center;
 }
 
+.img-links .about-us-icon{
+    width: 23.5px;
+    transform: translate(-2px);
+}
+.img-links .contact-us-icon{
+    transform: translate(11px);
+}
+.img-links .account-icon{
+    transform: translate(25px);
+}
+.img-links .basket-icon{
+    transform: translate(22px);
+}
+.img-links .browse-icon{
+    transform: translate(8px);
+}
+
 /*change colour of p, a and h tags*/
 
 a{
@@ -61,7 +102,6 @@ a{
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
-    background-color: blueviolet;
 }
 
 .log-in{
@@ -69,6 +109,7 @@ a{
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin: 50px;
 }
 
 .image{
@@ -95,17 +136,30 @@ a{
 
 .button{
     display: inline-block;
-    background: black;
+    border: 2px solid white;
+    background-color: transparent;
+    padding: 10px 20px;
+    cursor: pointer;
     color: white;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
+}
+.button:hover{
+    background-color: white;
+    color: black;
 }
 
 header{
-    background: beige;
+    padding-bottom: 45px;
+    background-color: rgb(159, 212, 255);
+    text-align: center;
+    /*background-image: url('images/header.png');
+    background-size: cover;
+    background-position: center center;*/
 }
 
+.log-in p{
+    text-align: left;
+    padding-bottom: 35px;
+}
 /*Product showcase*/
 .row{
     display: flex;
