--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -19,6 +19,14 @@
     align-items: center;
     padding: 20px;
 }
+.nav-links a{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.nav-links a:hover{
+    background-color: white;
+}
 
 .search-bar{
     text-align: center;
@@ -40,7 +48,6 @@
     flex: 1;
     text-align: right;
     padding-right: 10px;
-    margin-bottom: 20px;
     padding-top: 20px;
 }
 
@@ -109,7 +116,7 @@ a{
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 50px;
+    margin: 20px;
 }
 
 .image{
@@ -136,11 +143,11 @@ a{
 
 .button{
     display: inline-block;
-    border: 2px solid white;
+    border: 2px solid black;
     background-color: transparent;
     padding: 10px 20px;
     cursor: pointer;
-    color: white;
+    color: black;
 }
 .button:hover{
     background-color: white;
@@ -149,7 +156,7 @@ a{
 
 header{
     padding-bottom: 45px;
-    background-color: rgb(159, 212, 255);
+    background-color: rgb(127, 219, 235);
     text-align: center;
     /*background-image: url('images/header.png');
     background-size: cover;
@@ -157,7 +164,7 @@ header{
 }
 
 .log-in p{
-    text-align: left;
+    text-align: center;
     padding-bottom: 35px;
 }
 /*Product showcase*/
