--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -115,8 +115,8 @@
 }*/
 .banner{
     margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .banner::after{
@@ -131,6 +131,23 @@
 
 a{
     text-decoration: none;
+}
+.menu{
+    margin-top: 5px;
+    color: black;
+    font-size: small;
+    max-width: 400px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+.menu a{
+    text-decoration: none;
+    color: black;
+    text-align: center;
 }
 
 
@@ -156,6 +173,7 @@ a{
     padding: 10px 20px;
     cursor: pointer;
     color: white;
+    border-radius: 4px;
 }
 .button:hover{
     background-color: white;
