--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -12,9 +12,7 @@
     font-family:Arial, Helvetica, sans-serif
 }
 
-/*if want banner above navbar to have logo + image then create section class logo before navbar*/
-
-/*navbar - all contents*/
+/*******NAVBAR styling START- all contents********/
 .navbar{
     display: flex;
     align-items: center;
@@ -22,15 +20,14 @@
 }
 
 /*navbar - a tags/links to the other pages*/
-.nav-links a{
+a{
     color: black;
     text-decoration: none;
     cursor: pointer;
     padding: 2px;
 }
-.nav-links a:hover{
-    background-color: black;
-    color: white;
+a:hover{
+    text-decoration: underline;
 }
 
 /*searchbar - FUNCTIONALITY NEEDED*/
@@ -91,47 +88,44 @@
 
 .img-links .home-icon{
     width: 15px;
-    transform: translate(10px);
+    transform: translate(19px);
 }
 .img-links .about-us-icon{
     width: 17px;
-    transform: translate(7px);
+    transform: translate(9px);
 }
 .img-links .contact-us-icon{
     width: 15px;
-    transform: translate(15px);
+    transform: translate(17px);
 }
 .img-links .account-icon{
     width: 15px;
-    transform: translate(25px);
+    transform: translate(22px);
 }
 .img-links .basket-icon{
     width: 15px;
-    transform: translate(22px);
+    transform: translate(15px);
 }
-/*.img-links .browse-icon{
-    width: 15px;
-    transform: translate(8px);
-}*/
+
 .banner{
     margin: auto;
     padding-left: 20px;
     padding-right: 20px;
 }
-
 .banner::after{
     content: "";
     display: block;
     height: 1px;
-    background-color: grey;
     margin-top: 10px;
+    background-color: gray;
 }
 
-/*change colour of p, a and h tags*/
-
-a{
-    text-decoration: none;
+header{
+    padding-bottom: 5px;
+    text-align: center;
 }
+/********NAVBAR styling END- all contents**********/
+
 .menu{
     margin-top: 5px;
     color: black;
@@ -142,12 +136,16 @@ a{
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    
 }
 .menu a{
     text-decoration: none;
     color: black;
     text-align: center;
+    cursor: pointer;
+    padding: 2px;
+}
+.menu a:hover{
+    text-decoration: underline;
 }
 
 
@@ -180,17 +178,6 @@ a{
     color: black;
 }
 
-/*.image{ IMAGE was in banner - removed
-    flex-basis: 50%;
-    min-width: 300px;
-}
-.image img{
-    max-width: 100%;
-    padding: 50px 0;
-}*/
-
-/*change font style*/
-
 .heading{
     margin-left: 20px;
 }
@@ -201,13 +188,6 @@ a{
     margin: 25px 0;
 }
 
-header{
-    padding-bottom: 5px;
-    text-align: center;
-    /*background-image: url('images/header.png');
-    background-size: cover;
-    background-position: center center;*/
-}
 .log-in{
     color: white;
     background-image: url(images/banner.jpg);
@@ -221,7 +201,6 @@ header{
 }
 
 /* 5 Featured product showcase*/
-
 .row{
     display: flex;
     max-width: 1200px;
@@ -241,7 +220,6 @@ header{
     justify-content: center;
     border: 1px solid black;
     margin: 10px;
-   /*background-color: rgb(127, 219, 235);*/
 }
 
 .products img{
@@ -255,14 +233,6 @@ header{
     line-height: 60px;
 }
 
-/*
-.products .fp2{
-    width: 270px;
-    transform: translate(-40px);
-}
-.fp3,.fp2, .fp1{
-    margin-bottom: 20px;
-}*/
 .products h4, .products p{
     text-align: center;
     padding-top: 4px;
@@ -282,8 +252,9 @@ header{
 
 }
 .products .button:hover{
-    background-color: black;
+    background-color: rgb(34, 83, 198);
     color: white;
+    text-decoration: underline;
 }
 
 /*Discount section*/
@@ -319,63 +290,73 @@ header{
 }
 
 
-/*Footer*/
-
-footer{
-    font-size: 14px;
-    padding: 60px 0 20px;
-}
+/*******FOOTER***********/
 
 .footer{
+    font-size: small;
     display: flex;
-    margin: auto;
-    padding-top: 20px;
-    padding-left: 25px;
-    padding-right: 25px;
-    background-color:  rgb(127, 219, 235);
+    justify-content: space-around;
+    color: black;
+    padding: 25px 0 15px;
+}
+footer::before{
+    content: "";
+    display: block;
+    height: 1px;
+    background-color: gray;
+    padding: 0;
 }
 
-.footer-col, .footer-col1, .footer-col2{
-    min-width: 250px;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.footer-col{
-    flex-basis: 20%;
-}
-
-.footer-col1{
+.footer-box{
     flex: 1;
     text-align: center;
 }
+.footer-box img{
+    width: 20px;
+}
+.btn{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid black;
+    margin-top: 5px;
+    padding: 10px;
+}
+.btn:hover{
+    text-decoration: underline;
+}
+
 .footer h3{
     padding-bottom: 10px;
 }
-
-.footer-col1 img{
-    width: 70px;
-}
-
-.footer-col2 {
-    flex-basis: 12%;
-    text-align: center;
-}
-
 ul{
     list-style-type: none;
+    padding: 5px 10px;
+    display: inline-block;
 }
 
-footer hr{
-    border: none;
-    background-color:  rgb(127, 219, 235);
-    height: 1px;
-    margin: 10px 0;
-}
-
-.terms{
+footer p{
     text-align: center;
+    font-size: small;
+    padding: 10px;
+    margin-bottom: 10px;
 }
+.socials{
+    width: 15px;
+    margin: 10px;
+   transform: translate(140px);
+}
+.line{
+    content: "";
+    display: block;
+    height: 0.5px;
+    background-color: gray;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+/*************FOOTER END**************/
+
 
 /*Products Page*/
 .gallery{
