--- a/Home Page/style.css
+++ b/Home Page/style.css
@@ -275,8 +275,15 @@ header{
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    padding: 20px;
+    padding: 60px;
     margin-bottom: 20px;
+    background-size: contain;
+    background-position: center;
+    color: white;
+    text-shadow: 4px 2px 6px rgba(0, 0, 0, 0.5);
+}
+.box a:hover{
+    text-shadow: none;
 }
 
 .box h1, .box p{
@@ -284,11 +291,10 @@ header{
     text-align: center;
 }
 .box .button{
-    margin-top: 20px;
-    padding: 10px 10px;
+    margin-top: 10px;
 }
 .box img{
-    max-width: 500px;
+    max-width: 400px;
 }
 
 
