--- a/css/payments.css
+++ b/css/payments.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 *{
-  font-family: 'Poppins', sans-serif;
+  /*font-family: 'Poppins', sans-serif;*/
+  font-family: Arial, Helvetica, sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
-  outline: none; border:none;
+  outline: none; 
   text-transform: capitalize;
   transition: all .2s linear;
 }
@@ -14,8 +15,8 @@
   justify-content: center;
   align-items: center;
   padding:25px;
-  min-height: 100vh;
-  background: linear-gradient(90deg, #2e80cc 60%, #2e80cc 40.1%);
+  min-height: 100vh;  
+  /*background: linear-gradient(90deg, #2e80cc 60%, #2e80cc 40.1%);*/
 }
 
 .container form{
@@ -23,6 +24,7 @@
   width:700px;
   background: #fff;
   box-shadow: 0 5px 10px rgba(0,0,0,.1);
+  border: 1px solid black;
 }
 
 .container form .row{
@@ -82,12 +84,192 @@
   width: 100%;
   padding:12px;
   font-size: 17px;
-  background: #2732ae;
+  background: rgb(34, 83, 198);
   color:#fff;
   margin-top: 5px;
   cursor: pointer;
 }
 
 .container form .submit-btn:hover{
-  background: #2732ae;
+  opacity: 0.80;
 }
+
+/*******NAVBAR styling START- all contents********/
+.navbar{
+  display: flex;
+  align-items: center;
+  font-size: small;
+}
+
+/*navbar - a tags/links to the other pages*/
+a{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 2px;
+}
+a:hover{
+  text-decoration: underline;
+}
+
+/*searchbar - FUNCTIONALITY NEEDED*/
+.search-bar{
+  text-align: center;
+  margin-top: 10px;
+}
+.search-bar input{
+  width: 700px;
+  height: 19px;
+}
+.search-bar button{
+  background-color: transparent;
+  color: white;
+  border: none;
+  transform: translateY(4px);
+  cursor: pointer;
+}
+.search-bar .search-icon{
+  width: 15px;
+}
+
+/*div class=links - all contents*/
+.links{
+  flex: 1;
+  text-align: right;
+  padding-right: 5px;
+  padding-top: 20px;
+}
+.links nav{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.links .img-links img{
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  margin-right: 56px;
+}
+
+.links ul{
+  display: inline-block;
+  list-style-type: none;
+}
+
+.links .nav-links ul li{
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.links img{
+  display: inline-block;
+  width: 20px;
+  text-align: center;
+}
+
+.img-links .home-icon{
+  width: 15px;
+  transform: translate(19px);
+}
+.img-links .about-us-icon{
+  width: 17px;
+  transform: translate(9px);
+}
+.img-links .contact-us-icon{
+  width: 15px;
+  transform: translate(17px);
+}
+.img-links .account-icon{
+  width: 15px;
+  transform: translate(22px);
+}
+.img-links .basket-icon{
+  width: 15px;
+  transform: translate(15px);
+}
+
+.banner{
+  margin: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.banner::after{
+  content: "";
+  display: block;
+  height: 1px;
+  margin-top: 10px;
+  background-color: gray;
+}
+
+header{
+  padding-bottom: 5px;
+  text-align: center;
+}
+/********NAVBAR styling END- all contents**********/
+/*******FOOTER***********/
+
+.footer{
+  font-size: small;
+  display: flex;
+  justify-content: space-around;
+  color: black;
+  padding: 25px 0 15px;
+}
+footer::before{
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: gray;
+  padding: 0;
+}
+
+.footer-box{
+  flex: 1;
+  text-align: center;
+}
+.footer-box img{
+  width: 20px;
+}
+.btn{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid black;
+  margin-top: 5px;
+  padding: 10px;
+}
+.btn:hover{
+  text-decoration: underline;
+}
+
+.footer h3{
+  padding-bottom: 10px;
+}
+ul{
+  list-style-type: none;
+  padding: 5px 10px;
+  display: inline-block;
+}
+
+footer p{
+  text-align: center;
+  font-size: small;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.socials{
+  width: 15px;
+  margin: 10px;
+ transform: translate(140px);
+}
+.line{
+  content: "";
+  display: block;
+  height: 0.5px;
+  background-color: gray;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+/*************FOOTER END**************/
