--- a/css/home-page.css
+++ b/css/home-page.css
@@ -404,3 +404,68 @@ footer p{
     padding: 0;
     font-size: small;
 }
+/*Cart Items*/
+.cart-page{
+    margin: 80px auto;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+.cart-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+th{
+    text-align: left;
+    padding: 5px;
+    color:blue;
+    background:azure;
+    font-weight: normal;
+}
+td{
+    padding:10px 5px;
+}
+td input {
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+}
+td a{
+    color:blue;
+    font-size: 12px;
+}
+td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
+.total-price{
+    display: flex;
+    justify-content: flex-end;
+}
+.total-price table{
+    border-top: 3px solid #623bff;
+width:100%;
+max-width: 400px;
+td:last-child{
+    text-align: right;
+}
+}
+th:last-child{
+    text-align: right;
+}
+/*checkout button for cart page*/
+.checkout-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #623bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.checkout-button:hover {
+    background-color: #401f9b;
+}
