--- a/css/home-page.css
+++ b/css/home-page.css
@@ -199,20 +199,24 @@ a:hover{
 
 /********************PRODUCT Showcase********************/
 .row{
-    display: flex;
+    /*display: grid;
     flex-flow: row;
     position: relative;
-    width: auto;
+    width: auto;*/
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(17%, 1fr));
+    gap: 10px;
 }
 
 .products{
-    flex-basis: 1 1 17%;
+    /*flex-basis: 1 1 17%;*/
     align-items: center;
     padding: 3px;
     justify-content: center;
     border: 1px solid black;
     margin: 10px;
     height: 450px;
+    flex-direction:column;
 }
 
 .products img{
